--- a/NonogramSolver/pom.xml
+++ b/NonogramSolver/pom.xml
@@ -19,6 +19,13 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.3</version>
+        <scope>test</scope>
+    </dependency>
+
 </dependencies>
 
 <build>
@@ -35,6 +42,29 @@
             <groupId>org.pitest</groupId>
             <artifactId>pitest-maven</artifactId>
             <version>1.1.8</version>
+        </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.0</version>
+            <executions>
+                <execution>
+                    <id>default-prepare-agent</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+            <version>2.17</version>
+            <configuration>
+                <configLocation>checkstyle.xml</configLocation>
+            </configuration>
         </plugin>
     </plugins>
 </build>
