testi soppa commit

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ buildNumber.properties
 
 /Tiralabra2020-NonogramSolver/nbproject/private/
 /Tiralabra2020-NonogramSolver/nbproject/dist/
+/NonogramSolver/nbproject/
