--- a/NonogramSolver/pom.xml
+++ b/NonogramSolver/pom.xml
@@ -10,8 +10,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
-
 <dependencies>
     <dependency>
         <groupId>junit</groupId>
@@ -19,46 +17,37 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
-    
 </dependencies>
-</project>
 <build>
     <plugins>
-        <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
-            <version>3.3</version>
-        </plugin>
-        <plugin>
-            <groupId>org.pitest</groupId>
-            <artifactId>pitest-maven</artifactId>
-            <version>1.1.8</version>
-        </plugin>
         <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.0</version>
             <executions>
-                <execution>
-                    <id>default-prepare-agent</id>
-                    <goals>
-                        <goal>prepare-agent</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-            </configuration>
+	        <execution>
+	            <goals>
+	                <goal>prepare-agent</goal>
+	            </goals>
+	        </execution>
+	        <execution>
+	            <id>report</id>
+	            <phase>prepare-package</phase>
+	            <goals>
+	                <goal>report</goal>
+	            </goals>
+	        </execution>
+	    </executions>
         </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>2.17</version>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.0</version>
             <configuration>
-                <configLocation>checkstyle.xml</configLocation>
             </configuration>
         </plugin>
+
+
     </plugins>
 </build>
+</project>
